# caah

./: .env  .envrc  .gitignore  README.md  api-url.txt  convert.sh  my_aug.py  project-api.md  pyproject.toml  requirements.txt  run.sh  task-api.md  todo.md
cvat-api-doc/: assets-api.md  auth-api.md  cloudstorages-api.md  comments-api.md  consensus-api.md  events-api.md  guides-api.md  invitations-api.md  issues-api.md  jobs-api.md  labels-api.md  lambda-api.md  memberships-api.md  organizations-api.md  projects-api.md  quality-api.md  requests-api.md  schema-api.md  server-api.md  tasks-api.md  users-api.md  webhooks-api.md
doc/: README.md
doc/workflow/: README.md
src/: annotate.py  annotate_offline.py  annotate_online.py  annotator.py  converter.py  cvat.py  data_utils.py  dataset.py  main.py  migrate.py  server.py  train.py  utils.py  yolo_model.py
